# romajiagent

./: README.md  index.html  justfile  package.json  pnpm-lock.yaml
src/: main.ts  styles.css
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/src/: lib.rs  main.rs  normalization.rs  protocol.rs
