[package]
name = "romajiagent"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"
default-run = "romajiagent"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "romajiagent_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "romaji-agent-lfm-sidecar"
path = "src/bin/romaji-agent-lfm-sidecar.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
anyhow = "1"
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-global-shortcut = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
arboard = "3"
chrono = { version = "0.4", features = ["serde"] }
dirs = "6"
rusqlite = { version = "0.32", features = ["bundled"] }
toml = "0.8"
uuid = { version = "1", features = ["v4", "serde"] }
encoding_rs = "0.8"

[target.'cfg(target_os = "macos")'.dependencies]
llama-cpp-2 = { version = "0.1.146", features = ["metal"] }

[target.'cfg(not(target_os = "macos"))'.dependencies]
llama-cpp-2 = "0.1.146"
